1999-05-23  Roland McGrath  <roland@baalperazim.frob.com>

	* idvec-verify.c (SHADOW_PASSWORD_STRING): New macro.
	(verify_id): Check for shadow password immediately after getpwuid_r
	call, and replace PW->pw_passwd pointer with SP->sp_pwdp.
	This is ok since the only use will be later in the function,
	and we give the lookup buffer function scope.
	(verify_passwd): Don't call CHECK_SHADOW for main passwd,
	only when rechecking for wheel-group hack.

1999-05-20  Roland McGrath  <roland@baalperazim.frob.com>

	* idvec-verify.c (verify_passwd): Avoid nonreentrant getpwuid.
	If pw_passwd is "x", use getspnam_r and use its sp_pwdp if it succeeds.

1998-12-21  Mark Kettenis  <kettenis@phys.uva.nl>

	* ugids-verify-auth.c: Include <hurd/password.h> again and remove
	temporary definitions of password_check_user and
	password_check_group.

1998-11-29  Mark Kettenis  <kettenis@phys.uva.nl>

	* idvec-verify.c (verify_passwd): Grant access when the password
	in the passwd DB is empty.
	(verify_id): Also call verify_fn when the password in the password
	DB is empty.

1999-02-12  Gordon Matzigkeit  <gord@trick.fig.org>

	* Makefile (LCLHDRS): Purge argp-fmtstream.h and argp-namefrob.h.

1998-11-30  Mark Kettenis  <kettenis@phys.uva.nl>

	* ugids-verify-auth.c (svma_state_add_auths): Allocate correct
	number of bytes for new auth port array.
	(server_verify_make_auth): Set check to password_check_group if
	is_group is true and to password_check_user if not.  Not the other
	way around.

1998-09-26  Mark Kettenis  <kettenis@phys.uva.nl>

	* cacheq.c (cacheq_set_length): Fix the limit of the destination
	entries.  Decide that there is no following entry if the current
	entry is equal or greater than this limit.

1998-10-20  Roland McGrath  <roland@baalperazim.frob.com>

	* idvec-verify.c (verify_id): Add braces to silence gcc warning.

1998-10-19  Roland McGrath  <roland@baalperazim.frob.com>

	* exec-reauth.c (exec_reauth): Add braces to silence gcc warning.