@@ -1,3 +1,13 @@
+1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* fsysops.c (fsys_get_readonly): Use munmap instead of vm_deallocate.
+	* idvec-auth.c (idvec_merge_auth): Likewise.
+	* portinfo.c (print_port_info): Likewise.
+	(print_task_ports_info): Likewise.
+	* portxlate.c (port_name_xlator_create): Likewise.
+	(port_name_xlator_free): Likewise.
+	* xportinfo.c (print_xlated_task_ports_info): Likewise.
+
 1999-05-23  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* idvec-verify.c (SHADOW_PASSWORD_STRING): New macro.
